add "DrawTripertite" project

--- a/1 Dynamics/NewmarkBetaMethod/Python/RDMethod（テンプレートとして）.ipynb
+++ b/1 Dynamics/NewmarkBetaMethod/Python/RDMethod（テンプレートとして）.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1c732b98430>]"
+       "[<matplotlib.lines.Line2D at 0x1c579e84460>]"
       ]
      },
      "execution_count": 5,
