opt out some functions in python

--- a/0 SoftwareHelpers/SNAP/ParametricStudy/Python/ParametricStudy.ipynb
+++ b/0 SoftwareHelpers/SNAP/ParametricStudy/Python/ParametricStudy.ipynb
@@ -40,19 +40,63 @@
    "outputs": [],
    "source": [
     "# -*- coding:utf8 -*-\n",
-    "import json, sys, csv, math\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import glob\n",
-    "import os\n",
-    "import openpyxl"
+    "import glob, os, openpyxl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "490f6dc6",
+   "metadata": {},
+   "source": [
+    "## Merge"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c6418922",
+   "id": "ebd709c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def MergeForOneWave(dataColumn:int, dataName:str):\n",
+    "\n",
+    "  print()\n",
+    "  print(\"★★★★★ \" + dataName)\n",
+    "\n",
+    "  # ルートのフォルダ。\n",
+    "  files = glob.glob(INPUT_DIR_PATH + R'\\*.NAP-AVDQRFMList.csv')\n",
+    "  if(len(files) == 0):\n",
+    "    return\n",
+    "\n",
+    "  # Excel\n",
+    "  wb = openpyxl.Workbook()\n",
+    "  ws = wb.active\n",
+    "  ws.title=\"All\"\n",
+    "\n",
+    "  # 最初の1列を持ってくる。\n",
+    "  df = pd.read_csv(files[0], encoding=\"SHIFT-JIS\", dtype=str, usecols=[0])\n",
+    "  for i in range(len(df)):\n",
+    "    ws.cell(row=i+3, column=1).value=df.iloc[i,0]\n",
+    "\n",
+    "  # それ以降の全てを持ってくる\n",
+    "  for file in files:\n",
+    "    print(file)\n",
+    "    lastColumn = ws.max_column\n",
+    "    df = pd.read_csv(files[0], encoding=\"SHIFT-JIS\", dtype=str, usecols=[dataColumn])\n",
+    "    for i in range(len(df)):\n",
+    "      ws.cell(row=i+3, column=lastColumn+1).value=df.iloc[i,0]\n",
+    "      ws.cell(row=1, column=lastColumn+1).value=os.path.basename(file).replace(\".NAP-AVDQRFMList.csv\", \"\")\n",
+    "\n",
+    "  # 保存して終了\n",
+    "  wb.save(fR\"{OUTPUT_DIR_PATH}\\{dataName}.xlsx\")\n",
+    "  wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "64d7bad2-b8eb-4394-bb9c-c9188533fe0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +106,13 @@
     "# INPUT_DIR_PATH = R\"F:\\e-defenseモデル\\model\"\n",
     "# OUTPUT_DIR_PATH = R\"C:\\Users\\aki32\\Dropbox\\Documents\\02 東大関連\\0 授業\\3 建築学専攻\\建築構造・材料演習\\# 演習\\e-defenseモデル\\calc\\集計処理\"\n",
     "\n",
-    "TARGETS = [\n",
-    "  (1,\"PSV40\"),\n",
-    "  (3,\"PSV81\"),\n",
-    "  ]"
+    "TARGETS = [(1,\"PSV40\"),(3,\"PSV81\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "64d7bad2-b8eb-4394-bb9c-c9188533fe0f",
+   "execution_count": 6,
+   "id": "cbd3563d",
    "metadata": {},
    "outputs": [
     {
@@ -98,42 +139,8 @@
    ],
    "source": [
     "print(\"★ Process Started!\")\n",
-    "\n",
-    "if(not os.path.exists(OUTPUT_DIR_PATH)):\n",
-    "  os.mkdir(OUTPUT_DIR_PATH)\n",
-    "\n",
     "for target in TARGETS:\n",
-    "  print()\n",
-    "  print(\"★★★★★ \" + target[1])\n",
-    "\n",
-    "  # ルートのフォルダ。\n",
-    "  files = glob.glob(INPUT_DIR_PATH + R'\\*.NAP-AVDQRFMList.csv')\n",
-    "  if(len(files) == 0):\n",
-    "    continue\n",
-    "\n",
-    "  # Excel\n",
-    "  wb = openpyxl.Workbook()\n",
-    "  ws = wb.active\n",
-    "  ws.title=\"All\"\n",
-    "\n",
-    "  # 最初の1列を持ってくる。\n",
-    "  df = pd.read_csv(files[0], encoding=\"SHIFT-JIS\", dtype=str, usecols=[0])\n",
-    "  for i in range(len(df)):\n",
-    "    ws.cell(row=i+3, column=1).value=df.iloc[i,0]\n",
-    "\n",
-    "  # それ以降の全てを持ってくる\n",
-    "  for file in files:\n",
-    "    print(file)\n",
-    "    lastColumn = ws.max_column\n",
-    "    df = pd.read_csv(files[0], encoding=\"SHIFT-JIS\", dtype=str, usecols=[target[0]])\n",
-    "    for i in range(len(df)):\n",
-    "      ws.cell(row=i+3, column=lastColumn+1).value=df.iloc[i,0]\n",
-    "      ws.cell(row=1, column=lastColumn+1).value=os.path.basename(file).replace(\".NAP-AVDQRFMList.csv\", \"\")\n",
-    "\n",
-    "  # 保存して終了\n",
-    "  wb.save(fR\"{OUTPUT_DIR_PATH}\\{target[1]}.xlsx\")\n",
-    "  wb.close()\n",
-    "\n",
+    "  MergeForOneWave(target[0],target[1])\n",
     "print()\n",
     "print(\"★ Process Finished!\")"
    ]
@@ -144,9 +151,7 @@
    "id": "6b535de3-47c1-4c1c-8d24-d08b7cd9abe5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
